Feat: API 추가--도로소통 현황

--- a/external-info-service/src/main/resources/application.properties
+++ b/external-info-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=external-info-service
+
+
+# postgreSQL ??
+spring.datasource.url=jdbc:postgresql://localhost:5432/star
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
