--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=place-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/star
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
