--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -2,10 +2,13 @@ spring.application.name=place-service
 
 
 # postgreSQL ??
-spring.datasource.url=jdbc:postgresql://localhost:5432/star
-spring.datasource.username=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/stars_db
+spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
