--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=place-service
 
+server.port=8081
 
 # postgreSQL ??
 spring.datasource.url=jdbc:postgresql://localhost:5432/stars_db
