Feat:CAFE DATA 저장

--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
+
+# ??? API ? ??
+kakao.api.key=585808366c299a6686e7104a193017bb
+
+# ?? ??
+logging.level.com.example.placeservice=INFO
