Feat: 관광지 목록 조회 및 place-code 기반 관광지 상세 조회 API 추가

--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=place-service
 
-server.port=8081
-
 # postgreSQL ??
 spring.datasource.url=jdbc:postgresql://localhost:5432/stars_db
 spring.datasource.username=root
@@ -12,5 +10,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.defer-datasource-initialization=true
+# Hibernate SQL ?? ???
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
