--- a/congestion-service/src/main/resources/application.properties
+++ b/congestion-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=congestion-service
+
+# postgreSQL ??
+spring.datasource.url=jdbc:postgresql://localhost:5432/stars_db
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.defer-datasource-initialization=true
+# Hibernate SQL ?? ???
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
