Feat: build 관련 수정

--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -14,7 +14,6 @@ spring.jpa.show-sql=true
 spring.sql.init.mode=always
 
 # ??? API ? ??
-kakao.api.key=??? API ?
-
+kakao.api.key= kakao api key
 # ?? ??
 logging.level.com.example.placeservice=INFO
