Feat:날씨 아이콘 가져오기

--- a/external-info-service/src/main/resources/application.properties
+++ b/external-info-service/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=external-info-service
-
+server.port=8081
 
 # postgreSQL ??
-spring.datasource.url=jdbc:postgresql://localhost:5432/star
-spring.datasource.username=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/stars_db
+spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+seoul.api.key=505a6255746b696d34344b46566174
