--- a/external-info-service/src/main/resources/application.properties
+++ b/external-info-service/src/main/resources/application.properties
@@ -9,5 +9,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.elasticsearch.uris= http://elasticsearch.seoultravel.life:9200
+
+spring.mvc.contentnegotiation.favor-path-extension=false
+spring.mvc.contentnegotiation.media-types.json=application/json
+spring.mvc.default-response-type=application/json
+
 
 seoul.api.key=505a6255746b696d34344b46566174
