--- a/place-service/build.gradle
+++ b/place-service/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    //implementation 'io.github.cdimascio:dotenv-java:3.0.0' // 최신 버전
+    implementation 'io.github.cdimascio:dotenv-java:2.2.4'
+
     implementation 'org.apache.kafka:kafka-streams'
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
