--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -13,8 +13,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 
-# ??? API ? ??
-kakao.api.key=585808366c299a6686e7104a193017bb
+#API
+#kakao.api.key=585808366c299a6686e7104a193017bb
+kakao.api.key=${KAKAO_API_KEY}
 
 # ?? ??
 logging.level.com.example.placeservice=INFO
