--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -1,21 +1,14 @@
 spring.application.name=place-service
 
-<<<<<<< HEAD
-=======
 spring.config.import=optional:file:.env[.properties]
->>>>>>> a2b194bec03d45b8e8e92e326efdf5344d2d36da
 # postgreSQL ??
-spring.datasource.url=jdbc:postgresql://localhost:5432/stars_db
+spring.datasource.url=jdbc:postgresql://db:5432/stars_db
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-<<<<<<< HEAD
-spring.jpa.hibernate.ddl-auto=update
-=======
 spring.jpa.hibernate.ddl-auto=create
->>>>>>> a2b194bec03d45b8e8e92e326efdf5344d2d36da
 
 spring.jpa.defer-datasource-initialization=true
 # Hibernate SQL ?? ???
