Fix: merge 과정 중 발생한 오류 수정

--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=place-service
 
 spring.config.import=optional:file:.env[.properties]
 # postgreSQL ??
-spring.datasource.url=jdbc:postgresql://db:5432/stars_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/stars_db
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
