--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -9,10 +9,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
+
 
 
 #API
