--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -12,9 +12,8 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.sql.init.mode=always
 
-
+#spring.sql.init.mode=always
 
 #API
 kakao.api.key=${KAKAO_API_KEY}
