--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=user-service
+
+# ?? ??
+server.port=8082
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/stars_db
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA ??
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Hibernate ?? ??
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ?? ??
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# JWT ??
+jwt.secret=WRmYXNkZmFzZGZhc2RmYXNkZmFzZGZhc2Rm12345
+jwt.expiration=86400000
+jwt.refresh-expiration=2592000000
