--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,11 +1,19 @@
 spring.application.name=user-service
 
+server.port=8082
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/stars_db
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=1234
 
 
 jwt.secret=${JWT_SECRET_KEY}
+jwt.expiration=86400000
+jwt.refresh-expiration=2592000000
