Feat : 깃액션 테스트

--- a/place-service/.gitignore
+++ b/place-service/.gitignore
@@ -32,10 +32,11 @@ out/
 /nbproject/private/
 /nbbuild/
 /dist/
-/nbdist/
+/nbdist
 /.nb-gradle/
 
 ### VS Code ###
 .vscode/
 
-.env
+
+.Dockerfile
