--- a/place-service/src/main/resources/application.properties
+++ b/place-service/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=place-service
 
 spring.config.import=optional:file:.env[.properties]
 # postgreSQL ??
-spring.datasource.url=jdbc:postgresql://localhost:5432/stars_db
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://k8s-default-postgres-3cd777e0c6-3f8b28b1bf6a0192.elb.ap-northeast-2.amazonaws.com:5432/stars_db
+spring.datasource.username=postgres
+spring.datasource.password=example
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
