--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           cd place-service
           echo "${{ secrets.BACKEND_ENV}}" > .env
-          gradle bootJar
+          gradle bootJar -x test
           docker build -t $ECR_REGISTRY/place-service:$IMAGE_TAG .
           docker push $ECR_REGISTRY/place-service:$IMAGE_TAG  
 
@@ -64,7 +64,7 @@ jobs:
         run: |
           cd congestion-service
           echo "${{ secrets.BACKEND_ENV}}" > .env
-          gradle bootJar
+          gradle bootJar -x test
           docker build -t $ECR_REGISTRY/congestion-service:$IMAGE_TAG .
           docker push $ECR_REGISTRY/congestion-service:$IMAGE_TAG    
 
@@ -74,7 +74,7 @@ jobs:
         run: |
           cd external-info-service
           echo "${{ secrets.BACKEND_ENV}}" > .env
-          gradle bootJar
+          gradle bootJar -x test
           docker build -t $ECR_REGISTRY/external-info-service:$IMAGE_TAG .
           docker push $ECR_REGISTRY/external-info-service:$IMAGE_TAG    
       
