--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=gateway
+server.port=8080
+
+spring.cloud.gateway.routes[0].id=realtime-control-service
+spring.cloud.gateway.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.routes[0].predicates[0]=Path=/control/**
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/control/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[1].id=place-service
+spring.cloud.gateway.routes[1].uri=http://localhost:8082
+spring.cloud.gateway.routes[1].predicates[0]=Path=/place/**
+spring.cloud.gateway.routes[1].filters[0]=RewritePath=/place/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[2].id=user-service
+spring.cloud.gateway.routes[2].uri=http://localhost:8083
+spring.cloud.gateway.routes[2].predicates[0]=Path=/user/**
+spring.cloud.gateway.routes[2].filters[0]=RewritePath=/user/(?<segment>.*), /$\{segment}
