Feat : 깃액션 게이트웨이 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,11 +114,14 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
-          kubectl set image deployment/external-info-service external-info-service=$ECR_REGISTRY/external-info-service:$IMAGE_TAG
+          kubectl set image deployment/external-info-service external-info-service=$ECR_REGISTRY/external-info-service:latest
           kubectl rollout status deployment/external-info-service
           
-          kubectl set image deployment/place-service place-service=$ECR_REGISTRY/place-service:$IMAGE_TAG
+          kubectl set image deployment/place-service place-service=$ECR_REGISTRY/place-service:latest
           kubectl rollout status deployment/place-service
           
-          kubectl set image deployment/congestion-service congestion-service=$ECR_REGISTRY/congestion-service:$IMAGE_TAG
+          kubectl set image deployment/congestion-service congestion-service=$ECR_REGISTRY/congestion-service:latest
           kubectl rollout status deployment/congestion-service
+          
+          kubectl set image deployment/gateway gateway=$ECR_REGISTRY/gateway:latest
+          kubectl rollout status deployment/gateway
