--- a/external-info-service/src/main/resources/application.properties
+++ b/external-info-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=external-info-service
-<<<<<<< HEAD
-=======
+
 server.port=8081
 
 # postgreSQL ??
@@ -18,5 +17,4 @@ spring.mvc.contentnegotiation.media-types.json=application/json
 spring.mvc.default-response-type=application/json
 
 
-seoul.api.key=505a6255746b696d34344b46566174
->>>>>>> 1230fbad88e7b4ae62a7080d04646e647a3a6793
+seoul.api.key=${SEOUL_API_KEY}
