--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     env:
-      ECR_REGISTRY: ${{ needs.setup.outputs.ecr-registry }}
+      ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
       IMAGE_TAG: 1.${{ github.run_number }}
     steps:
       - name: Checkout repo
@@ -64,7 +64,7 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     env:
-      ECR_REGISTRY: ${{ needs.setup.outputs.ecr-registry }}
+      ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
       IMAGE_TAG: 1.${{ github.run_number }}
     steps:
       - name: Checkout repo
@@ -89,7 +89,7 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     env:
-      ECR_REGISTRY: ${{ needs.setup.outputs.ecr-registry }}
+      ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
       IMAGE_TAG: 1.${{ github.run_number }}
     steps:
       - name: Checkout repo
@@ -113,7 +113,7 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     env:
-      ECR_REGISTRY: ${{ needs.setup.outputs.ecr-registry }}
+      ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
       IMAGE_TAG: 1.${{ github.run_number }}
     steps:
       - name: Checkout repo
