--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
-    env :
-      IMAGE_TAG: 1.${{ github.run_number }}
+    outputs:
+      ecr-registry: ${{ steps.set-ecr.outputs.registry }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -27,6 +27,10 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - name: ecr 로그인 정보 변수로 등ㄺ
+        id: set-ecr
+        run: echo "registry=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_OUTPUT
+
       - name: 자바 설치
         uses: actions/setup-java@v2
         with:
@@ -40,7 +44,7 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     env:
-      ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      ECR_REGISTRY: ${{ needs.setup.outputs.ecr-registry }}
       IMAGE_TAG: 1.${{ github.run_number }}
     steps:
       - name: Checkout repo
@@ -64,7 +68,7 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     env:
-      ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      ECR_REGISTRY: ${{ needs.setup.outputs.ecr-registry }}
       IMAGE_TAG: 1.${{ github.run_number }}
     steps:
       - name: Checkout repo
@@ -89,7 +93,7 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     env:
-      ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      ECR_REGISTRY: ${{ needs.setup.outputs.ecr-registry }}
       IMAGE_TAG: 1.${{ github.run_number }}
     steps:
       - name: Checkout repo
@@ -113,7 +117,7 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     env:
-      ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      ECR_REGISTRY: ${{ needs.setup.outputs.ecr-registry }}
       IMAGE_TAG: 1.${{ github.run_number }}
     steps:
       - name: Checkout repo
