--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,9 @@ jobs:
 
       - name: ecr 로그인 정보 변수로 등ㄺ
         id: set-ecr
-        run: echo "registry=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_OUTPUT
+        run: echo "registry=$ECR_REGISTRY" >> $GITHUB_OUTPUT
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
 
       - name: 자바 설치
         uses: actions/setup-java@v2
