Feat : 깃액션 게이트웨이 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Build & Push external-info-service
         run: |
           cd external-info-service
+          echo "ECR_REGISTRY is: [$ECR_REGISTRY]"
           echo "${{ secrets.BACKEND_ENV}}" > .env
           gradle bootJar -x test
           docker build -t $ECR_REGISTRY/external-info-service:$IMAGE_TAG .
