--- a/congestion-service/.gitignore
+++ b/congestion-service/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 .env
+src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
