--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,6 @@ jobs:
         run: |
           echo "ECR_REGISTRY is: [$ECR_REGISTRY]"
           echo "registry=$ECR_REGISTRY" >> $GITHUB_OUTPUT
-          echo "${{ steps.set-ecr.outputs.registry }}"
         env: # 이거 먼저 돌고 run 돔
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
 
@@ -43,7 +42,10 @@ jobs:
           java-version: '17'
 
       - name: kubeconfig 설정
-        run: aws eks update-kubeconfig --region   ap-northeast-2 --name one-cluster
+        run: |
+          aws eks update-kubeconfig --region   ap-northeast-2 --name one-cluster
+          run: echo "Step output: ${{ steps.set-ecr.outputs.registry }}"
+        
 
   external-info-service-build :
     needs: setup
