--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,5 @@
 name: Backend Upload ECR
 
-#on:
-#  workflow_dispatch:
-#    inputs:
-#      environment:
-#        description: '수동 배포'
-#        required: true
-#        default: 'all'
-#        type: choice
-#        options:
-#          - all
-#          - latest
-
 on:
   push:
     branches: [develop]
@@ -20,20 +8,12 @@ on:
 
 
 jobs:
-  upload-image:
-    runs-on: ubuntu-latest
-    env :
-      IMAGE_TAG: ${{ github.run_number }}
-    steps:
-#      - name: Set IMAGE_TAG based on input
-#        id: tag
-#        run: |
-#          if [ "${{ github.event.inputs.environment }}" = "all" ]; then
-#            echo "IMAGE_TAG=1.0.${{ github.run_number }}" >> $GITHUB_ENV
-#          else
-#            echo "IMAGE_TAG=latest" >> $GITHUB_ENV
-#          fi
 
+  external-info-service-build :
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: 1.${{ github.run_number }}
+    steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
@@ -54,22 +34,61 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: gateway 빌드
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      - name: kubeconfig 설정
         run: |
-          cd gateway
+          aws eks update-kubeconfig --region   ap-northeast-2 --name one-cluster
+          echo "Step output: ${{ steps.set-ecr.outputs.registry }}"
+
+      - name: Build & Push external-info-service
+        env: # ecr 업로드 할 때 필요한 변수들 선언
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }} # ecr 경로
+        run: |
+          cd external-info-service
+          echo "ECR_REGISTRY is: [$ECR_REGISTRY]"
           echo "${{ secrets.BACKEND_ENV}}" > .env
           gradle bootJar -x test
-          docker build -t $ECR_REGISTRY/gateway:$IMAGE_TAG .
-          docker tag $ECR_REGISTRY/gateway:$IMAGE_TAG $ECR_REGISTRY/gateway:latest
+          docker build -t $ECR_REGISTRY/external-info-service:$IMAGE_TAG .
+          docker tag $ECR_REGISTRY/external-info-service:$IMAGE_TAG $ECR_REGISTRY/external-info-service:latest
+          
+          docker push $ECR_REGISTRY/external-info-service:$IMAGE_TAG    
+          docker push $ECR_REGISTRY/external-info-service:latest 
+          
+          kubectl set image deployment/external-info-service external-info-service=$ECR_REGISTRY/external-info-service:$IMAGE_TAG
+          kubectl rollout status deployment/external-info-service
 
-          docker push $ECR_REGISTRY/gateway:$IMAGE_TAG    
-          docker push $ECR_REGISTRY/gateway:latest
+  place-service-build:
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: 1.${{ github.run_number }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - name: place-service 빌드
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ap-northeast-2
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: 자바 설치
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: kubeconfig 설정
+        run: |
+          aws eks update-kubeconfig --region   ap-northeast-2 --name one-cluster
+          echo "Step output: ${{ steps.set-ecr.outputs.registry }}"
+
+      - name: Build & Push place-service
+        env: # ecr 업로드 할 때 필요한 변수들 선언
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }} # ecr 경로
         run: |
           cd place-service
           echo "${{ secrets.BACKEND_ENV}}" > .env
@@ -79,10 +98,44 @@ jobs:
           
           docker push $ECR_REGISTRY/place-service:$IMAGE_TAG   
           docker push $ECR_REGISTRY/place-service:latest
+          
+          echo "태그 확인: place-service=$ECR_REGISTRY/place-service:$IMAGE_TAG"
+          
+          kubectl set image deployment/place-service place-service=$ECR_REGISTRY/place-service:$IMAGE_TAG
+          kubectl rollout status deployment/place-service
 
-      - name: congestion-service 빌드
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+  congestion-service-build:
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: 1.${{ github.run_number }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ap-northeast-2
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: 자바 설치
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: kubeconfig 설정
+        run: |
+          aws eks update-kubeconfig --region   ap-northeast-2 --name one-cluster
+          echo "Step output: ${{ steps.set-ecr.outputs.registry }}"
+      - name: Build & Push congestion-service
+        env: # ecr 업로드 할 때 필요한 변수들 선언
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }} # ecr 경로
         run: |
           cd congestion-service
           echo "${{ secrets.BACKEND_ENV}}" > .env
@@ -92,36 +145,53 @@ jobs:
           
           docker push $ECR_REGISTRY/congestion-service:$IMAGE_TAG    
           docker push $ECR_REGISTRY/congestion-service:latest
-
-      - name: external-info-service 빌드
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        run: |
-          cd external-info-service
-          echo "${{ secrets.BACKEND_ENV}}" > .env
-          gradle bootJar -x test
-          docker build -t $ECR_REGISTRY/external-info-service:$IMAGE_TAG .
-          docker tag $ECR_REGISTRY/external-info-service:$IMAGE_TAG $ECR_REGISTRY/external-info-service:latest
           
-          docker push $ECR_REGISTRY/external-info-service:$IMAGE_TAG    
-          docker push $ECR_REGISTRY/external-info-service:latest  
-      
+          kubectl set image deployment/congestion-service congestion-service=$ECR_REGISTRY/congestion-service:$IMAGE_TAG
+          kubectl rollout status deployment/congestion-service
+
+  gateway-build:
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: 1.${{ github.run_number }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ap-northeast-2
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: 자바 설치
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: kubeconfig 설정
-        run: aws eks update-kubeconfig --region   ap-northeast-2 --name one-cluster
-
-      - name: Deploy to EKS
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
-          kubectl set image deployment/external-info-service external-info-service=$ECR_REGISTRY/external-info-service:latest
-          kubectl rollout status deployment/external-info-service
+          aws eks update-kubeconfig --region   ap-northeast-2 --name one-cluster
+          echo "Step output: ${{ steps.set-ecr.outputs.registry }}"
+      - name: Build & Push gateway
+        env: # ecr 업로드 할 때 필요한 변수들 선언
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }} # ecr 경로
+        run: |
+          cd gateway
+          echo "${{ secrets.BACKEND_ENV}}" > .env
+          gradle bootJar -x test
+          docker build -t $ECR_REGISTRY/gateway:$IMAGE_TAG .
+          docker tag $ECR_REGISTRY/gateway:$IMAGE_TAG $ECR_REGISTRY/gateway:latest
+
+          docker push $ECR_REGISTRY/gateway:$IMAGE_TAG    
+          docker push $ECR_REGISTRY/gateway:latest
           
-          kubectl set image deployment/place-service place-service=$ECR_REGISTRY/place-service:latest
-          kubectl rollout status deployment/place-service
+          echo "태그 확인: gateway=$ECR_REGISTRY/gateway:$IMAGE_TAG"
           
-          kubectl set image deployment/congestion-service congestion-service=$ECR_REGISTRY/congestion-service:latest
-          kubectl rollout status deployment/congestion-service
-          
-          kubectl set image deployment/gateway gateway=$ECR_REGISTRY/gateway:latest
+          kubectl set image deployment/gateway gateway=$ECR_REGISTRY/gateway:$IMAGE_TAG
           kubectl rollout status deployment/gateway
