--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -9,9 +9,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.data.redis.host=localhost
+spring.data.redis.host=redis-master-cs
 spring.data.redis.port=6379
-spring.data.redis.password=1234
 
 jwt.secret=${JWT_SECRET_KEY}
 jwt.expiration=86400000
