--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -195,3 +195,49 @@ jobs:
           
           kubectl set image deployment/gateway gateway=$ECR_REGISTRY/gateway:$IMAGE_TAG
           kubectl rollout status deployment/gateway
+          
+
+  user-service-build:
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: 1.${{ github.run_number }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ap-northeast-2
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: 자바 설치
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: kubeconfig 설정
+        run: |
+          aws eks update-kubeconfig --region   ap-northeast-2 --name one-cluster
+          echo "Step output: ${{ steps.set-ecr.outputs.registry }}"
+      - name: Build & Push gateway
+        env: # ecr 업로드 할 때 필요한 변수들 선언
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }} # ecr 경로
+        run: |
+          cd gateway
+          echo "${{ secrets.BACKEND_USER_ENV}}" > .env
+          gradle bootJar -x test
+          docker build -t $ECR_REGISTRY/user-service:$IMAGE_TAG .
+          docker tag $ECR_REGISTRY/gateway:$IMAGE_TAG $ECR_REGISTRY/user-service:latest
+
+          docker push $ECR_REGISTRY/user-service:$IMAGE_TAG    
+          docker push $ECR_REGISTRY/user-service:latest
+
+          kubectl set image deployment/user-service user-service=$ECR_REGISTRY/user-service:$IMAGE_TAG
+          kubectl rollout status deployment/user-service
